# ISO5436_XML

Licence/: openGPS_Licence.txt
doc/SDK/HTML_Stylesheet/: doxy_footer.html  doxy_header.html
include/opengps/: data_point.h  data_point_type.h  info.h  iso5436_2.h  iso5436_2_handle.h  messages.h  opengps.h  point_iterator.h  point_vector.h
include/opengps/cxx/: data_point.hxx  exceptions.hxx  info.hxx  iso5436_2.hxx  iso5436_2_handle.hxx  opengps.hxx  point_iterator.hxx  point_vector.hxx  point_vector_base.hxx  string.hxx
src/: Doxyfile  Doxygen.cpp  Version.h  openGPS.sln
src/ISO5436_2_XML/: CMakeLists.txt  FindXSD.cmake  FindXerces.cmake  ISO5436_2_XML.pro  ISO5436_2_XML.vcproj  ISO5436_2_XML.vcxproj  ISO5436_2_XML.vcxproj.filters  ISO5436_2_XML_DLL.vcproj  ISO5436_2_b.xsd  create_cpp_from_xsd.bat  iso5436_2.xsd  iso5436_2_xsd.cxx  iso5436_2_xsd.hxx  xsd_Licence_Header.c
src/ISO5436_2_XML/c/: data_point.cxx  data_point.hxx  data_point_c.cxx  data_point_c.hxx  exceptions.cxx  exceptions.hxx  info.cxx  info_c.cxx  iso5436_2_c.cxx  iso5436_2_handle.cxx  iso5436_2_handle.hxx  iso5436_2_handle_c.hxx  messages_c.cxx  messages_c.hxx  point_iterator.cxx  point_iterator.hxx  point_iterator_c.cxx  point_vector.cxx  point_vector.hxx  point_vector_c.cxx
src/ISO5436_2_XML/cxx/: Version.in  auto_ptr_types.hxx  binary_lsb_point_vector_reader_context.cxx  binary_lsb_point_vector_reader_context.hxx  binary_lsb_point_vector_writer_context.cxx  binary_lsb_point_vector_writer_context.hxx  binary_msb_point_vector_reader_context.cxx  binary_msb_point_vector_reader_context.hxx  binary_msb_point_vector_writer_context.cxx  binary_msb_point_vector_writer_context.hxx  binary_point_vector_reader_context.cxx  binary_point_vector_reader_context.hxx  binary_point_vector_writer_context.cxx  binary_point_vector_writer_context.hxx  data_point_impl.cxx  data_point_impl.hxx  data_point_parser.hxx  data_point_proxy.cxx  double_data_point_parser.cxx  double_data_point_parser.hxx  double_point_buffer.cxx  double_point_buffer.hxx  environment.cxx  environment.hxx  exceptions.cxx  float_data_point_parser.cxx  float_data_point_parser.hxx  float_point_buffer.cxx  float_point_buffer.hxx  info.cxx  inline_validity.cxx  inline_validity.hxx  int16_data_point_parser.cxx  int16_data_point_parser.hxx  int16_point_buffer.cxx  int16_point_buffer.hxx  int32_data_point_parser.cxx  int32_data_point_parser.hxx  int32_point_buffer.cxx  int32_point_buffer.hxx  (+50 more)
src/ISO5436_2_XML/xyssl/: md5.c  md5.h
src/ISO5436_2_XML_Demo/: CMakeLists.txt  FindMinizip.cmake  FindXSD.cmake  FindXerces.cmake  ISO5436_2_XML_Demo.cpp  ISO5436_2_XML_Demo.cxx  ISO5436_2_XML_Demo.vcproj  ISO5436_2_XML_Demo.vcxproj  RunDemo.bat
src/ISO5436_2_XML_Demo/samplefiles/: ISO5436-sample1.x3p  ISO5436-sample1.xml  ISO5436-sample1_bin.x3p  ISO5436-sample1_bin.xml  ISO5436-sample2.x3p  ISO5436-sample2.xml  ISO5436-sample3.x3p  ISO5436-sample3.xml  ISO5436-sample4.x3p  ISO5436-sample4.xml  ISO5436-sample4_bin.x3p  ISO5436-sample4_bin.xml
src/MATLAB/CreateSampleFiles/: CreateSampleFromNMS.m  Readme.txt
src/MATLAB/ImportExportX3P/: ImportExportX3P.vcproj  MakeX3PMex.m  TestX3P.m  X3PUtilities.cpp  X3PUtilities.h  openX3P.cpp  writeX3P.cpp
src/tools/: subwcrev.sh
src/tools/IncRev/: IncRev.c
src/zlib/contrib/minizip/: CMakeLists.txt  Makefile  Makefile.in
src/zlib/contrib/vstudio/vc10/: zlibvc.vcxproj
src/zlib/contrib/vstudio/vc8/: zlibstat.vcproj
